--- a/css/m.css
+++ b/css/m.css
@@ -1,4 +1,14 @@
 @charset "gb2312";
+ol{
+	padding-left: 10px;
+}
+ol li{
+		list-style:none;
+        list-style-type:decimal;
+        list-style-position:inside;
+		padding-left:5px;
+		padding-right:20px;
+}
 @media screen and (min-width: 1024px) and (max-width: 1199px) {
 header { width: 100%; margin: auto; }
 .nav { width: 90% }
